# TRM

./: .env.example  .gitignore  README.md  docker-compose.override.yml  docker-compose.yml  temper-development-roadmap.md  temper-project-plan.md
.obsidian/: workspace.json
backend/: Dockerfile  alembic.ini  pyproject.toml
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py  002_add_rls_policies.py  003_add_audit_logs.py  004_add_risks_table.py  005_add_risk_matrix_config_table.py  62e4a0f2f4c9_add_risk_matrix_config_table.py  7a345bf923c1_add_assets_table.py  8b456cf034d2_update_risk_asset_mapping.py  9c567de145e3_add_risk_treatments_table.py
backend/app/: config.py  db.py  dependencies.py  main.py  worker.py
backend/app/integrations/: connectwise.py
backend/app/middleware/: audit.py  request_id.py  tenant.py
backend/app/models/: __init__.py  asset.py  audit_log.py  base.py  risk.py  risk_matrix.py  risk_matrix_config.py  tenant.py  treatment.py  user.py  user_tenant_role.py
backend/app/routers/: __init__.py  auth.py  config.py  health.py  risk_matrix.py  risks.py
backend/app/schemas/: __init__.py  auth.py  config.py  responses.py  risk.py  risk_matrix.py
backend/app/services/: auth.py  config.py  notifications.py  risk.py
backend/app/tasks/: cw_sync.py
backend/scripts/: seed_risk_matrix.py
backend/tests/: conftest.py  test_audit.py  test_risk.py  test_risk_matrix.py  test_rls.py
docs/: API_CONTRACTS.md  ARCHITECTURE.md  CHANGELOG.md  CONVENTIONS.md  DATA_RESIDENCY.md  DESIGN_DECISIONS.md  ENVIRONMENT.md  SCHEMA.md  (+3 more)
(+16 files in other folders)
